added some new files

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
 
 </body>
-<<<<<<< HEAD
-<script src="test.js"></script>
-=======
-<script src="good_pair.js"></script>
->>>>>>> 9820a9671047629da367a1d6d59afe7c29b01001
+
+<script src="./test.js"></script>
 
 </html>
